--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -6,7 +6,7 @@ spec:
   selector:
     app: kubernetes-test
   ports:
-    - protocol: TCP
-      port: 8080
+    - port: 8080
       targetPort: 8080
+      nodePort: 30007
   type: NodePort
